# Architecture-Platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  README.md  pyproject.toml  run.sh
backend/app/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  audit.py  components.py  core_thoughts.py  deployments.py  doubt.py  feedbacks.py  health.py  literature.py  requirements.py  search.py  versions.py
backend/app/services/: __init__.py  graph_dsl.py  importer.py
backend/app/static/css/: custom.css  draft.css  site.css  tabs.css
backend/app/static/js/: app.js
backend/app/templates/: base.html  index.html  landing.html  search.html
backend/app/templates/_components/: breadcrumb.html  empty-state.html  tabs.html
backend/app/templates/audit/: detail.html  list.html
backend/app/templates/components/: detail.html  list.html  tree.html
backend/app/templates/core_thought/: detail.html  edit.html  list.html  new.html
backend/app/templates/deployments/: map.html
backend/app/templates/doubt/: _cycle.html  list.html  new.html  result.html
backend/app/templates/feedbacks/: _card.html  detail.html  kanban.html
backend/app/templates/help/: detail.html  list.html
backend/app/templates/literature/: detail.html  edit.html  list.html  new.html
backend/app/templates/requirements/: _card.html  _row.html  detail.html  edit.html  list.html  new.html
backend/app/ui/: __init__.py  helpers.py  markdown_renderer.py  proxy.py  routes.py
backend/scripts/: import_components.py
backend/tests/: conftest.py  test_smoke.py  test_ui.py  test_z_audit.py  test_z_component_delete.py  test_z_component_delete_ui.py  test_z_component_positioning.py  test_z_core_thought.py  test_z_fcr.py  test_z_feedback_new_ui.py  test_z_list_component_versions.py  test_z_literature.py  test_z_patch_composed_of.py  test_z_proxy_httpx_kwargs.py  test_z_requirement_edit.py  test_z_requirements_state_machine_error.py  test_z_schemas_layered_deps.py  test_z_verified_state_machine.py
cli/: .gitignore  README.md  pyproject.toml
cli/.github/workflows/: publish.yml  test.yml
cli/src/arch_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py
cli/src/arch_cli/commands/: __init__.py  component.py  config_cmd.py  core_thought.py  deployment.py  doubt.py  feedback.py  outdated.py  requirement.py  search.py  version.py
cli/tests/: test_cli.py  test_z_fcr.py  test_z_resolve_req_id.py
deploy/: arch-platform.service  audit.sh  backup.sh  install-cron.sh  install-nginx.sh  install-public-nginx.sh  install-systemd.sh  nginx-arch-intelab.conf  nginx-arch-platform.conf  setup-cross-cloud-ssh.sh
docs/: DESIGN.md  ai-assets-integration.md  asset-criteria.md  data-dictionary.md  er-diagram.md  fcr-metric.md  openapi.yaml
examples/: deploy-with-arch-register.yml  sdlc-demo.md  (+1 more)
mcp_server/: README.md  pyproject.toml
mcp_server/arch_mcp/: __init__.py  __main__.py  client.py  server.py
mcp_server/arch_mcp/tools/: __init__.py  components.py  deployments.py  doubt.py  feedbacks.py  requirements.py  search.py
mcp_server/tests/: test_mcp.py
(+38 files in other folders)
