[project]
name = "arch-platform"
version = "0.1.0"
description = "架构平台 MVP 后端 — 组件登记/复用/反馈系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "jinja2>=3.1",              # Phase 4 Web UI 模板
    "python-multipart>=0.0.9",  # PATCH 表单解析
    "httpx>=0.27",              # Phase 4 UI 服务器代理调后端 API
    "mcp[cli]>=1.0",            # Phase 6 MCP Server(Model Context Protocol)
    "mistune>=3.0",             # REQ-8be0f95c /help 路由 markdown 渲染
    "pygments>=2.18",           # REQ-8be0f95c /help 路由代码高亮
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]