[project]
name = "arch-platform-cli"
version = "0.2.0"
description = "Architecture Platform CLI — 架构平台命令行工具(组件登记/版本/反馈/部署)"
requires-python = ">=3.12"
authors = [
    { name = "andywong", email = "noreply@anthropic.com" },
]
license = { text = "MIT" }
keywords = ["architecture", "components", "registry", "reuse", "feedback"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",          # 漂亮输出 + 表格 + 颜色
    "tomli>=2.0; python_version < '3.11'",  # Python <3.11 才需要(>=3.12 内置 tomllib)
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.10"]

[project.scripts]
arch = "arch_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arch_cli = ["py.typed"]

# 仓库:AndyWongWithAI/Architecture-Platform
# 安装:pip install arch-platform-cli(后续发到 GitHub Packages)